Fix width of button being too small in bottom bar, fix terminate all sessions button styling

--- a/war/src/main/less/modules/buttons.less
+++ b/war/src/main/less/modules/buttons.less
@@ -161,7 +161,7 @@ each(@variants, {
 
   &--equal-buttons {
     .jenkins-button {
-      width: 90px;
+      min-width: 90px;
     }
   }
 }
